<resources>
    <string name="arg">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="APKTOOL_RENAMED_0x7f120004">Navigate up</string>
    <string name="APKTOOL_RENAMED_0x7f120006">Done</string>
    <string name="APKTOOL_RENAMED_0x7f120009">OFF</string>
    <string name="APKTOOL_RENAMED_0x7f12000a">ON</string>
    <string name="APKTOOL_RENAMED_0x7f12000b">Alt+</string>
    <string name="APKTOOL_RENAMED_0x7f12000c">Ctrl+</string>
    <string name="APKTOOL_RENAMED_0x7f12000d">delete</string>
    <string name="APKTOOL_RENAMED_0x7f12000e">enter</string>
    <string name="APKTOOL_RENAMED_0x7f12000f">Function+</string>
    <string name="APKTOOL_RENAMED_0x7f120010">Meta+</string>
    <string name="APKTOOL_RENAMED_0x7f120011">Shift+</string>
    <string name="APKTOOL_RENAMED_0x7f120012">space</string>
    <string name="APKTOOL_RENAMED_0x7f120013">Sym+</string>
    <string name="APKTOOL_RENAMED_0x7f120014">Menu+</string>
    <string name="APKTOOL_RENAMED_0x7f120015">Search…</string>
    <string name="APKTOOL_RENAMED_0x7f120016">Clear query</string>
    <string name="APKTOOL_RENAMED_0x7f120018">Search</string>
    <string name="APKTOOL_RENAMED_0x7f120019">Submit query</string>
    <string name="APKTOOL_RENAMED_0x7f12001a">Voice search</string>
    <string name="APKTOOL_RENAMED_0x7f12001d">Collapse</string>
    <string name="APKTOOL_RENAMED_0x7f12001e">Add bookmark</string>
    <string name="APKTOOL_RENAMED_0x7f12001f">Back</string>
    <string name="APKTOOL_RENAMED_0x7f120020">Bookmarks</string>
    <string name="APKTOOL_RENAMED_0x7f120021">Cancel</string>
    <string name="APKTOOL_RENAMED_0x7f120022">continue</string>
    <string name="APKTOOL_RENAMED_0x7f120023">Copy link</string>
    <string name="APKTOOL_RENAMED_0x7f120024">Delete</string>
    <string name="APKTOOL_RENAMED_0x7f120025">Download</string>
    <string name="APKTOOL_RENAMED_0x7f120026">Forward</string>
    <string name="APKTOOL_RENAMED_0x7f120027">History</string>
    <string name="APKTOOL_RENAMED_0x7f120028">Default</string>
    <string name="APKTOOL_RENAMED_0x7f120029">New tab</string>
    <string name="APKTOOL_RENAMED_0x7f12002a">Next</string>
    <string name="APKTOOL_RENAMED_0x7f12002b">No</string>
    <string name="APKTOOL_RENAMED_0x7f12002c">OK</string>
    <string name="APKTOOL_RENAMED_0x7f12002d">Open</string>
    <string name="APKTOOL_RENAMED_0x7f12002e">Rename</string>
    <string name="APKTOOL_RENAMED_0x7f12002f">Share</string>
    <string name="APKTOOL_RENAMED_0x7f120030">Yes</string>
    <string name="APKTOOL_RENAMED_0x7f120031">Later</string>
    <string name="APKTOOL_RENAMED_0x7f120032">Privacy policy</string>
    <string name="APKTOOL_RENAMED_0x7f120033">Showing ads</string>
    <string name="APKTOOL_RENAMED_0x7f120034">Tip</string>
    <string name="APKTOOL_RENAMED_0x7f120035">Update</string>
    <string name="APKTOOL_RENAMED_0x7f120037">Added successfully</string>
    <string name="APKTOOL_RENAMED_0x7f12003e">allow</string>
    <string name="APKTOOL_RENAMED_0x7f12003f">Already in the list</string>
    <string name="APKTOOL_RENAMED_0x7f120040">This name is already in use.</string>
    <string name="APKTOOL_RENAMED_0x7f120041">Android Player</string>
    <string name="APKTOOL_RENAMED_0x7f120042">androidx.startup</string>
    <string name="APKTOOL_RENAMED_0x7f120043">App was forcibly stopped</string>
    <string name="APKTOOL_RENAMED_0x7f120044">Video Downloader</string>
    <string name="APKTOOL_RENAMED_0x7f120045">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="APKTOOL_RENAMED_0x7f120046">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="APKTOOL_RENAMED_0x7f120047" />
    <string name="APKTOOL_RENAMED_0x7f120048">Continue</string>
    <string name="APKTOOL_RENAMED_0x7f120049">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="APKTOOL_RENAMED_0x7f12004a">No recently displayed ads found.</string>
    <string name="APKTOOL_RENAMED_0x7f12004b">Displays more info about the list item.</string>
    <string name="APKTOOL_RENAMED_0x7f12004c">Track Axon events and see them here by using AppLovinEventService.trackEvent(...).</string>
    <string name="APKTOOL_RENAMED_0x7f12004d">To use %s you must agree to our Terms &amp; Conditions and affirm you have reviewed our Privacy Policy</string>
    <string name="APKTOOL_RENAMED_0x7f12004e">To use %s you must affirm that you have reviewed and acknowledged our Privacy Policy.</string>
    <string name="APKTOOL_RENAMED_0x7f12004f">Privacy Policy</string>
    <string name="APKTOOL_RENAMED_0x7f120050">Terms &amp; Conditions</string>
    <string name="APKTOOL_RENAMED_0x7f120051">Terms of Use</string>
    <string name="APKTOOL_RENAMED_0x7f120052">Audio</string>
    <string name="APKTOOL_RENAMED_0x7f120053">Auto Rotate</string>
    <string name="APKTOOL_RENAMED_0x7f120054">Back here and tap the save button</string>
    <string name="APKTOOL_RENAMED_0x7f120057">Install</string>
    <string name="APKTOOL_RENAMED_0x7f120058">Please install Android System WebView from Google play first.</string>
    <string name="APKTOOL_RENAMED_0x7f120059">The Webpage cannot be displayed.</string>
    <string name="APKTOOL_RENAMED_0x7f12005a">Batch delete</string>
    <string name="APKTOOL_RENAMED_0x7f12005b">About this app</string>
    <string name="APKTOOL_RENAMED_0x7f12005c">Click to try?</string>
    <string name="APKTOOL_RENAMED_0x7f12005d">Reviews</string>
    <string name="APKTOOL_RENAMED_0x7f12005e">View more</string>
    <string name="APKTOOL_RENAMED_0x7f12005f">Install</string>
    <string name="APKTOOL_RENAMED_0x7f120060">Free access now!</string>
    <string name="APKTOOL_RENAMED_0x7f120061">Choose your favorite video</string>
    <string name="APKTOOL_RENAMED_0x7f120062">Auto-play in %ds</string>
    <string name="APKTOOL_RENAMED_0x7f120063">Downloads</string>
    <string name="APKTOOL_RENAMED_0x7f120064">Ad ERID copied</string>
    <string name="APKTOOL_RENAMED_0x7f120065">ERID: %s</string>
    <string name="APKTOOL_RENAMED_0x7f120066">Copy link</string>
    <string name="APKTOOL_RENAMED_0x7f120067">Hide ADs</string>
    <string name="APKTOOL_RENAMED_0x7f120068">Link copied</string>
    <string name="APKTOOL_RENAMED_0x7f120069">Recommendation Rules</string>
    <string name="APKTOOL_RENAMED_0x7f12006a">Report ADs</string>
    <string name="APKTOOL_RENAMED_0x7f12006b">Privacy</string>
    <string name="APKTOOL_RENAMED_0x7f12006c">About this advertiser</string>
    <string name="APKTOOL_RENAMED_0x7f12006d">I Agree</string>
    <string name="APKTOOL_RENAMED_0x7f12006e">Cancel</string>
    <string name="APKTOOL_RENAMED_0x7f12006f">By submitting this form, you agree to send your personal information to BIGO Ads and {company_name}. BIGO Ads and {company_name} will use this information in accordance with their own privacy policy. View BIGO’s Privacy Policy and {company_name}’s Privacy Policy.</string>
    <string name="APKTOOL_RENAMED_0x7f120070">Privacy Notice</string>
    <string name="APKTOOL_RENAMED_0x7f120071">Please Enter</string>
    <string name="APKTOOL_RENAMED_0x7f120072">Submit</string>
    <string name="APKTOOL_RENAMED_0x7f120073">The answer is required</string>
    <string name="APKTOOL_RENAMED_0x7f120074">Application</string>
    <string name="APKTOOL_RENAMED_0x7f120075">%s</string>
    <string name="APKTOOL_RENAMED_0x7f120076">Everyone</string>
    <string name="APKTOOL_RENAMED_0x7f120077">Recommended</string>
    <string name="APKTOOL_RENAMED_0x7f120078">Web</string>
    <string name="APKTOOL_RENAMED_0x7f120079">Jump to details page or third party app</string>
    <string name="APKTOOL_RENAMED_0x7f12007a">Shake</string>
    <string name="APKTOOL_RENAMED_0x7f12007b">Slide</string>
    <string name="APKTOOL_RENAMED_0x7f12007c">Twist</string>
    <string name="APKTOOL_RENAMED_0x7f12007d">Link copied</string>
    <string name="APKTOOL_RENAMED_0x7f12007e">You will lose your reward.</string>
    <string name="APKTOOL_RENAMED_0x7f12007f">MORE</string>
    <string name="APKTOOL_RENAMED_0x7f120080">Resume</string>
    <string name="APKTOOL_RENAMED_0x7f120081">Skip</string>
    <string name="APKTOOL_RENAMED_0x7f120082">Skip video?</string>
    <string name="APKTOOL_RENAMED_0x7f120083">SKIP</string>
    <string name="APKTOOL_RENAMED_0x7f120084">Skip after</string>
    <string name="APKTOOL_RENAMED_0x7f120085">Ad</string>
    <string name="APKTOOL_RENAMED_0x7f120086">bigo_ad_tag_back</string>
    <string name="APKTOOL_RENAMED_0x7f120087">bigo_ad_tag_close</string>
    <string name="APKTOOL_RENAMED_0x7f120088">bigo_ad_tag_forward</string>
    <string name="APKTOOL_RENAMED_0x7f120089">bigo_ad_tag_progressbar</string>
    <string name="APKTOOL_RENAMED_0x7f12008a">bigo_ad_tag_title</string>
    <string name="APKTOOL_RENAMED_0x7f12008b">Fantastic and interesting</string>
    <string name="APKTOOL_RENAMED_0x7f12008c">Loading</string>
    <string name="APKTOOL_RENAMED_0x7f12008d">Apps you may like</string>
    <string name="APKTOOL_RENAMED_0x7f12008e">Block ads</string>
    <string name="APKTOOL_RENAMED_0x7f12008f">Enjoy the new version now!</string>
    <string name="APKTOOL_RENAMED_0x7f120090">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="APKTOOL_RENAMED_0x7f120091">Collapse</string>
    <string name="APKTOOL_RENAMED_0x7f120093">Expand</string>
    <string name="APKTOOL_RENAMED_0x7f120095">Expand halfway</string>
    <string name="APKTOOL_RENAMED_0x7f12009b">Brightness :</string>
    <string name="APKTOOL_RENAMED_0x7f12009c">Brightness</string>
    <string name="APKTOOL_RENAMED_0x7f12009d">Browser</string>
    <string name="APKTOOL_RENAMED_0x7f1200a5">getAppName</string>
    <string name="APKTOOL_RENAMED_0x7f1200a6">getIconUrl</string>
    <string name="APKTOOL_RENAMED_0x7f1200a7">getImageUrl</string>
    <string name="APKTOOL_RENAMED_0x7f1200ad">Clear cache</string>
    <string name="APKTOOL_RENAMED_0x7f1200af">Clear browser history</string>
    <string name="APKTOOL_RENAMED_0x7f1200e5">Delete</string>
    <string name="APKTOOL_RENAMED_0x7f120104">Download with Wi-Fi Only</string>
    <string name="APKTOOL_RENAMED_0x7f120175">Feedback</string>
    <string name="APKTOOL_RENAMED_0x7f120190">Help</string>
    <string name="APKTOOL_RENAMED_0x7f12019b">How to Download</string>
    <string name="APKTOOL_RENAMED_0x7f1201ac">Language options</string>
    <string name="APKTOOL_RENAMED_0x7f1201ad">Later</string>
    <string name="APKTOOL_RENAMED_0x7f120237">Modify PIN</string>
    <string name="APKTOOL_RENAMED_0x7f12029b">New version available</string>
    <string name="APKTOOL_RENAMED_0x7f1202aa">Continue to use mobile data to download?</string>
    <string name="APKTOOL_RENAMED_0x7f1202ab">Not connected to Wi-Fi</string>
    <string name="APKTOOL_RENAMED_0x7f1202b5">Off</string>
    <string name="APKTOOL_RENAMED_0x7f1202be">On</string>
    <string name="APKTOOL_RENAMED_0x7f120302">Recently used websites</string>
    <string name="APKTOOL_RENAMED_0x7f120364">Search engine</string>
    <string name="APKTOOL_RENAMED_0x7f12036c">Select</string>
    <string name="APKTOOL_RENAMED_0x7f12036d">Select all</string>
    <string name="APKTOOL_RENAMED_0x7f120379">Settings</string>
    <string name="APKTOOL_RENAMED_0x7f12037a">General Settings</string>
    <string name="APKTOOL_RENAMED_0x7f12037d">Do you like it? Share it and let more people know about it!</string>
    <string name="APKTOOL_RENAMED_0x7f12037e">Thanks for using %s</string>
    <string name="APKTOOL_RENAMED_0x7f12037f">Share now</string>
    <string name="APKTOOL_RENAMED_0x7f120396">Sync to gallery</string>
    <string name="APKTOOL_RENAMED_0x7f1203a5">Clear cookies</string>
    <string name="APKTOOL_RENAMED_0x7f1203a8">Download location</string>
    <string name="APKTOOL_RENAMED_0x7f12045d">Unlock</string>
    <string name="APKTOOL_RENAMED_0x7f12046b">Application version</string>
</resources>