<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cm_dp_24" android:layout_marginBottom="@dimen/cm_dp_24" android:src="@drawable/no_res_emoj" />
    <TextView android:textSize="@dimen/cm_sp_18" android:textColor="#333333" android:gravity="center" android:id="@id/share_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/APKTOOL_RENAMED_0x7f12037e" android:layout_marginStart="@dimen/cm_dp_24" android:layout_marginEnd="@dimen/cm_dp_24" />
    <TextView android:textSize="@dimen/cm_sp_16" android:textColor="#999999" android:gravity="center" android:id="@id/share_sub_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cm_dp_12" android:text="@string/APKTOOL_RENAMED_0x7f12037d" android:layout_marginStart="@dimen/cm_dp_24" android:layout_marginEnd="@dimen/cm_dp_24" />
    <Button android:textSize="@dimen/cm_sp_16" android:textColor="#ffffff" android:id="@id/share_now" android:background="@drawable/common_got_it_backg" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cm_dp_24" android:minHeight="@dimen/cm_dp_48" android:text="@string/APKTOOL_RENAMED_0x7f12037f" android:layout_marginStart="@dimen/cm_dp_24" android:layout_marginEnd="@dimen/cm_dp_24" />
    <TextView android:textSize="@dimen/cm_sp_16" android:textColor="#999999" android:gravity="center" android:id="@id/share_later" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cm_dp_12" android:layout_marginBottom="@dimen/cm_dp_12" android:minHeight="@dimen/cm_dp_48" android:text="@string/APKTOOL_RENAMED_0x7f1201ad" android:textAllCaps="true" android:layout_marginStart="@dimen/cm_dp_24" android:layout_marginEnd="@dimen/cm_dp_24" />
</LinearLayout>
