<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/wifi_tips_icon" android:layout_width="@dimen/cm_dp_46" android:layout_height="@dimen/cm_dp_46" android:layout_marginTop="@dimen/cm_dp_16" app:srcCompat="@drawable/ic_no_wifi" />
    <TextView android:textSize="@dimen/cm_sp_20" android:textColor="@color/wifi_tips_text_color" android:gravity="center" android:id="@id/wifi_tips_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cm_dp_4" android:text="@string/APKTOOL_RENAMED_0x7f1202ab" android:fontFamily="@font/lato_bold" android:layout_marginStart="@dimen/cm_dp_20" android:layout_marginEnd="@dimen/cm_dp_20" />
    <TextView android:textSize="@dimen/cm_sp_16" android:textColor="@color/wifi_tips_text_color" android:gravity="center" android:id="@id/wifi_tips_subtitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cm_dp_18" android:text="@string/APKTOOL_RENAMED_0x7f1202aa" android:fontFamily="@font/lato_regular" android:layout_marginStart="@dimen/cm_dp_20" android:layout_marginEnd="@dimen/cm_dp_20" />
    <TextView android:textSize="@dimen/cm_sp_18" android:textColor="@color/white" android:gravity="center" android:id="@id/wifi_tips_continue" android:background="@drawable/common_got_it_backg" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_46" android:layout_marginTop="@dimen/cm_dp_36" android:text="@string/APKTOOL_RENAMED_0x7f120022" android:fontFamily="@font/lato_bold" android:layout_marginStart="@dimen/cm_dp_20" android:layout_marginEnd="@dimen/cm_dp_20" />
    <TextView android:textSize="@dimen/cm_sp_15" android:textColor="#7a8194" android:gravity="center" android:id="@id/wifi_tips_cancel" android:background="?android:selectableItemBackground" android:padding="@dimen/cm_dp_24" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/APKTOOL_RENAMED_0x7f120021" />
</LinearLayout>
