<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/setting_root" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:layout_width="match_parent" android:layout_height="?actionBarSize" android:layout_alignParentTop="true" android:elevation="@dimen/cm_dp_2" custom:title="@string/APKTOOL_RENAMED_0x7f120379" />
    <ScrollView android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@id/toolbar">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <android.supprot.design.widgit.view.CommonRemoveAdView android:id="@id/remove_ad_view" android:layout_width="match_parent" android:layout_height="wrap_content" />
            <TextView android:textSize="@dimen/cm_sp_14" android:textColor="@color/accent_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cm_dp_16" android:text="@string/APKTOOL_RENAMED_0x7f120025" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            <RelativeLayout android:id="@id/rl_download_location" android:background="?android:selectableItemBackground" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_72">
                <ImageView android:id="@id/iv_set_location" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/cm_dp_16" android:layout_alignParentEnd="true" custom:srcCompat="@drawable/ic_settings_black_24dp" custom:tint="@color/accent_color" />
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" android:layout_toStartOf="@id/iv_set_location">
                    <TextView android:textSize="@dimen/cm_sp_16" android:textColor="@color/title_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/APKTOOL_RENAMED_0x7f1203a8" android:maxLines="2" />
                    <TextView android:textSize="@dimen/cm_sp_12" android:textColor="@color/sub_title_color" android:id="@id/tv_download_location" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cm_dp_2" android:maxLines="2" />
                </LinearLayout>
            </RelativeLayout>
            <View android:id="@id/v_download_wifi_line" android:background="@color/divider_light" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_1" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            <RelativeLayout android:id="@id/rl_download_wifi" android:background="?android:selectableItemBackground" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_52">
                <androidx.appcompat.widget.SwitchCompat android:id="@id/sc_wifi" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/cm_dp_16" android:layout_alignParentEnd="true" />
                <TextView android:textSize="@dimen/cm_sp_16" android:textColor="@color/title_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/APKTOOL_RENAMED_0x7f120104" android:maxLines="2" android:layout_centerVertical="true" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" android:layout_toStartOf="@id/sc_wifi" />
            </RelativeLayout>
            <View android:background="@color/divider_light" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_1" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            <TextView android:textSize="@dimen/cm_sp_14" android:textColor="@color/accent_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cm_dp_16" android:text="@string/APKTOOL_RENAMED_0x7f12009d" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            <RelativeLayout android:id="@id/rl_ad_block" android:background="?android:selectableItemBackground" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_72">
                <androidx.appcompat.widget.SwitchCompat android:id="@id/sc_ad_block" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/cm_dp_16" android:layout_alignParentEnd="true" />
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" android:layout_toStartOf="@id/sc_ad_block">
                    <TextView android:textSize="@dimen/cm_sp_16" android:textColor="@color/title_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/APKTOOL_RENAMED_0x7f12008e" />
                    <TextView android:textSize="@dimen/cm_sp_12" android:textColor="@color/sub_title_color" android:id="@id/tv_ad_block" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cm_dp_2" android:text="@string/APKTOOL_RENAMED_0x7f1202be" />
                </LinearLayout>
            </RelativeLayout>
            <View android:background="@color/divider_light" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_1" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            <RelativeLayout android:id="@id/rl_show_website" android:background="?android:selectableItemBackground" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_52">
                <androidx.appcompat.widget.SwitchCompat android:id="@id/tb_show_website" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/cm_dp_16" android:layout_alignParentEnd="true" />
                <TextView android:textSize="@dimen/cm_sp_16" android:textColor="@color/title_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/APKTOOL_RENAMED_0x7f120302" android:layout_centerVertical="true" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" android:layout_toStartOf="@id/tb_show_website" />
            </RelativeLayout>
            <View android:background="@color/divider_light" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_1" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/rl_search_engine" android:background="?android:selectableItemBackground" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_72">
                <TextView android:textSize="@dimen/cm_sp_16" android:textColor="@color/title_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/APKTOOL_RENAMED_0x7f120364" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
                <TextView android:textSize="@dimen/cm_sp_12" android:textColor="@color/sub_title_color" android:ellipsize="end" android:id="@id/tv_search_engine" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cm_dp_2" android:maxLines="1" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            </LinearLayout>
            <View android:background="@color/divider_light" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_1" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            <TextView android:textSize="@dimen/cm_sp_16" android:textColor="@color/title_color" android:gravity="center_vertical" android:id="@id/rl_clear_cache" android:background="?android:selectableItemBackground" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_52" android:text="@string/APKTOOL_RENAMED_0x7f1200ad" android:paddingStart="@dimen/cm_dp_16" android:paddingEnd="@dimen/cm_dp_16" />
            <View android:background="@color/divider_light" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_1" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            <TextView android:textSize="@dimen/cm_sp_16" android:textColor="@color/title_color" android:gravity="center_vertical" android:id="@id/rl_clear_history" android:background="?android:selectableItemBackground" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_52" android:text="@string/APKTOOL_RENAMED_0x7f1200af" android:paddingStart="@dimen/cm_dp_16" android:paddingEnd="@dimen/cm_dp_16" />
            <View android:background="@color/divider_light" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_1" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            <TextView android:textSize="@dimen/cm_sp_16" android:textColor="@color/title_color" android:gravity="center_vertical" android:id="@id/rl_clear_cookies" android:background="?android:selectableItemBackground" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_52" android:text="@string/APKTOOL_RENAMED_0x7f1203a5" android:paddingStart="@dimen/cm_dp_16" android:paddingEnd="@dimen/cm_dp_16" />
            <View android:background="@color/divider_light" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_1" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            <TextView android:textSize="@dimen/cm_sp_14" android:textColor="@color/accent_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cm_dp_16" android:text="@string/APKTOOL_RENAMED_0x7f12037a" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            <RelativeLayout android:id="@id/rl_language" android:background="?android:selectableItemBackground" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_52">
                <ImageView android:id="@id/iv_language" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/cm_dp_16" android:layout_alignParentEnd="true" custom:srcCompat="@drawable/vector_ic_drop_down_arrow" />
                <TextView android:textSize="@dimen/cm_sp_14" android:textColor="@color/accent_color" android:id="@id/tv_language" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/cm_dp_10" android:layout_toStartOf="@id/iv_language" />
                <TextView android:textSize="@dimen/cm_sp_16" android:textColor="@color/title_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/APKTOOL_RENAMED_0x7f1201ac" android:layout_centerVertical="true" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" android:layout_toStartOf="@id/tv_language" />
            </RelativeLayout>
            <View android:background="@color/divider_light" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_1" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            <RelativeLayout android:id="@id/rl_sync_gallery" android:background="?android:selectableItemBackground" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_72">
                <androidx.appcompat.widget.SwitchCompat android:id="@id/sc_sync_gallery" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/cm_dp_16" android:layout_alignParentEnd="true" />
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" android:layout_toStartOf="@id/sc_sync_gallery">
                    <TextView android:textSize="@dimen/cm_sp_16" android:textColor="@color/title_color" android:id="@id/tv_gallery" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/APKTOOL_RENAMED_0x7f120396" />
                    <TextView android:textSize="@dimen/cm_sp_12" android:textColor="@color/sub_title_color" android:id="@id/tv_sync_gallery" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cm_dp_2" android:text="@string/APKTOOL_RENAMED_0x7f1202b5" />
                </LinearLayout>
            </RelativeLayout>
            <View android:background="@color/divider_light" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_1" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            <TextView android:textSize="@dimen/cm_sp_14" android:textColor="@color/accent_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cm_dp_16" android:text="@string/APKTOOL_RENAMED_0x7f120190" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            <TextView android:textSize="@dimen/cm_sp_16" android:textColor="@color/title_color" android:gravity="center_vertical" android:id="@id/tv_howto_download" android:background="?android:selectableItemBackground" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_52" android:text="@string/APKTOOL_RENAMED_0x7f12019b" android:paddingStart="@dimen/cm_dp_16" android:paddingEnd="@dimen/cm_dp_16" />
            <View android:background="@color/divider_light" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_1" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            <TextView android:textSize="@dimen/cm_sp_16" android:textColor="@color/title_color" android:gravity="center_vertical" android:id="@id/tv_feedback" android:background="?android:selectableItemBackground" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_52" android:text="@string/APKTOOL_RENAMED_0x7f120175" android:paddingStart="@dimen/cm_dp_16" android:paddingEnd="@dimen/cm_dp_16" />
            <View android:background="@color/divider_light" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_1" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            <TextView android:textSize="@dimen/cm_sp_16" android:textColor="@color/title_color" android:gravity="center_vertical" android:id="@id/tv_privacy_policy" android:background="?android:selectableItemBackground" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_52" android:text="@string/APKTOOL_RENAMED_0x7f120032" android:paddingStart="@dimen/cm_dp_16" android:paddingEnd="@dimen/cm_dp_16" />
            <RelativeLayout android:id="@id/rl_new_version" android:background="?android:selectableItemBackground" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_53" android:paddingStart="@dimen/cm_dp_16" android:paddingEnd="@dimen/cm_dp_16">
                <View android:id="@id/new_version_divider" android:background="@color/divider_light" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_1" />
                <TextView android:textSize="@dimen/cm_sp_16" android:textColor="@color/title_color" android:gravity="center_vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/APKTOOL_RENAMED_0x7f12029b" android:layout_below="@id/new_version_divider" />
                <ImageView android:id="@id/iv_red_point" android:layout_width="@dimen/cm_dp_24" android:layout_height="@dimen/cm_dp_24" android:layout_marginTop="@dimen/cm_dp_15" android:layout_alignParentEnd="true" custom:srcCompat="@drawable/ic_update_notice" />
            </RelativeLayout>
            <View android:background="@color/divider_light" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_1" android:layout_marginStart="@dimen/cm_dp_16" android:layout_marginEnd="@dimen/cm_dp_16" />
            <TextView android:textSize="@dimen/cm_sp_16" android:textColor="@color/title_color" android:gravity="center_vertical" android:id="@id/tv_version" android:background="?android:selectableItemBackground" android:layout_width="match_parent" android:layout_height="@dimen/cm_dp_52" android:text="@string/APKTOOL_RENAMED_0x7f12046b" android:paddingStart="@dimen/cm_dp_16" android:paddingEnd="@dimen/cm_dp_16" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
